<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Concordium Wallet</string>
    <string name="app_menu_item_home">Home</string>
    <string name="app_menu_item_buy">Buy</string>
    <string name="app_menu_item_tokens">NFT</string>
    <string name="app_menu_item_earn">Stake</string>
    <string name="app_menu_item_activity">Activity</string>
    <string name="app_menu_item_transfer">Transfer</string>
    <string name="app_error_general">Unexpected error</string>
    <string name="app_error_lib">An unexpected error occurred, please try again</string>
    <string name="app_error_encryption">Unexpected cryptography error</string>
    <string name="app_error_json">Unexpected json format</string>
    <string name="app_import_missing_identities">The file imported did not contain any identities. This indicates a corrupted backup file</string>
    <string name="app_error_wrong_environment">Files exported on Concordium MainNet, TestNet or StageNet are not compatible with the other chains. Please import on the correct chain</string>
    <string name="app_error_keystore">Unexpected keystore error</string>
    <string name="app_error_keystore_key_invalidated">Biometrics has been changed and therefore disabled</string>
    <string name="app_error_backend_unknown_host_exception">Cannot connect. Please check the internet connection</string>
    <string name="app_error_backend_connect_exception">Cannot connect. Please check the internet connection</string>
    <string name="app_error_backend_unknown_sockettimeout_exception">Connection to server timed out. Please check the internet connection</string>
    <string name="app_error_backend_internal_server">Cannot establish communication with the server</string>
    <string name="app_error_backend_unknown_error_code">Cannot establish communication with the server</string>
    <string name="app_error_backend_account_does_not_exist">The account does not exist</string>
    <string name="app_error_backend_unknown">Unknown backend error</string>
    <string name="app_gstroke">CCD</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="template_view_identity_expires_on">Expires on %1$s</string>
    <string name="view_identity_status_done">Approved</string>
    <string name="view_identity_status_pending">Pending</string>
    <string name="view_identity_status_error">Error</string>
    <string name="view_identity_status_unknown">Unknown</string>
    <string name="view_account_name_initial">%1$s (Initial)</string>
    <string name="failed_title">Failed</string>
    <string name="failed_try_again">Please try again.</string>
    <string name="failed_run_recovery_and_try_again">Please run the recovery and try again.</string>
    <string name="failed_confirm">Okay</string>
    <string name="failed_remove">Remove from the list</string>
    <string name="welcome_recover_title">Import Wallet</string>
    <string name="welcome_recover_details">Select a way to import your wallet</string>
    <string name="welcome_recover_use_phrase">Seed phrase wallet</string>
    <string name="welcome_recover_use_phrase_details">Manually enter or paste all your 24 words in order as it was presented to you</string>
    <string name="welcome_recover_import_via_seed_phrase">Import via seed phrase</string>
    <string name="welcome_recover_import_via_seed_or_private_key">Import via seed phrase or wallet private key</string>
    <string name="welcome_recover_import_via_seed">Import via wallet private key</string>
    <string name="welcome_recover_import_via_backup_file">Import via backup file</string>
    <string name="welcome_recover_use_file">File wallet</string>
    <string name="welcome_recover_use_file_details">Use your exported backup file from your device</string>
    <string name="welcome_recover_file_wallet_aware_text">Be aware that you can not create new accounts or identities in your file wallet.</string>
    <string name="auth_password">Password</string>
    <string name="auth_confirm">Continue</string>
    <string name="auth_error_password_setup">Failed to setup password</string>
    <string name="auth_error_password_not_valid">Password is not valid - minimum length is 6.</string>
    <string name="auth_error_passwords_different">Passwords do not match. Please try again</string>
    <string name="auth_dialog_password_title">Authentication</string>
    <string name="auth_dialog_passcode_description">Enter app passcode to continue</string>
    <string name="auth_dialog_passcode">Passcode</string>
    <string name="auth_dialog_password_description">Enter app password to continue</string>
    <string name="auth_dialog_password">Password</string>
    <string name="auth_login_title">Login</string>
    <string name="auth_login_confirm">Continue</string>
    <string name="auth_login_info_passcode">Enter Passcode</string>
    <string name="auth_login_info_password">Enter Password</string>
    <string name="auth_login_passcode_error">Incorrect passcode. Please try again</string>
    <string name="auth_login_password_error">Incorrect password. Please try again</string>
    <string name="auth_login_biometrics_dialog_title">Authentication</string>
    <string name="auth_login_biometrics_dialog_subtitle">Use biometrics to authenticate</string>
    <string name="auth_login_biometrics_dialog_cancel_passcode">Use passcode</string>
    <string name="auth_login_biometrics_dialog_cancel_password">Use password</string>
    <string name="auth_login_seed_error">Error 101: Encryption failed</string>
    <string name="auth_setup_title">Select Passcode</string>
    <string name="auth_setup_repeat_title">Repeat Passcode</string>
    <string name="auth_setup_info">Set a 6-digit passcode to secure your wallet.</string>
    <string name="auth_setup_repeat_info">Repeat a 6-digit passcode to secure your wallet.</string>
    <string name="auth_setup_full_password">Use full password instead</string>
    <string name="auth_setup_password_title">Select Password</string>
    <string name="auth_setup_password_repeat_title">Repeat Password</string>
    <string name="auth_setup_password_info">Set a password with at least 6 characters.</string>
    <string name="auth_setup_password_repeat_info">Repeat your password to secure your wallet.</string>
    <string name="auth_setup_password_use_passcode">Use digit passcode instead</string>
    <string name="auth_setup_biometrics_dialog_title">Enable biometrics</string>
    <string name="auth_setup_biometrics_dialog_subtitle">Use biometrics to enable it for this app</string>
    <string name="auth_setup_biometrics_dialog_cancel">Cancel</string>
    <string name="identities_overview_title">Identities</string>
    <string name="identities_overview_no_identities">You have no identities yet.</string>
    <string name="identities_overview_identity_verified_title">Identity verified</string>
    <string name="identities_overview_identity_verified_message">%1$s has been verified by the identity provider. You can now start using the identity to create accounts</string>
    <string name="identities_overview_identity_create_account_now">Create account now</string>
    <string name="identities_overview_identity_later">Later</string>
    <string name="identities_overview_identity_rejected_title">Identity rejected</string>
    <string name="identities_overview_identity_rejected_text">Your identity request was unfortunately rejected with the following reason:\n\n%1$s\n\nRejected identity requests cannot be resolved, so the rejected identity will be discarded, after dismissing this notification.\n\nDo you want to make another request now?</string>
    <string name="about_support">Support</string>
    <string name="about_support_text">If you encountered a problem, or need help with something, you can reach out to us via <a href="mailto:support@concordium.com?subject=CryptoX">support@concordium.com</a></string>
    <string name="about_contact">Website</string>
    <string name="about_contact_text">For more info about Concordium Wallet you can visit <a href="https://concordium.com">concordium.com</a></string>
    <string name="about_version">App Version</string>
    <string name="about_legal">Legal Information</string>
    <string name="about_terms_link"><a href="#terms">Terms and Conditions</a></string>
    <string name="about_privacy_link"><a href="https://www.concordium.com/legal/privacy-policy">Privacy policy</a></string>
    <string name="cis_newly_received_notice_title">You received a new token</string>
    <string name="template_cis_newly_received_notice_message">
        %1$s has not been listed in your wallet till this transaction.
        You can accept it or remove it from the list.
    </string>
    <string name="cis_newly_received_notice_keep_token">Keep it</string>
    <string name="cis_newly_received_notice_remove_token">Remove from the wallet</string>
    <string name="delegation_remove_subtitle1">Stop your delegation</string>
    <string name="delegation_remove_description">
        Stopping your delegation is subject to a cooldown period, in which the stake cannot be spent or transferred.
        \n\n
        At the end of the cooldown period, the delegated amount is unlocked on your public balance, and
        the funds will be at disposal again.
    </string>
    <string name="delegation_validation_go_back_button">Go back</string>
    <string name="delegation_validation_continue_button">Continue</string>
    <string name="baker_registration_open_explain">You can choose to add a URL with metadata about your validator. Leave it blank if you don’t have any.</string>
    <string name="baker_registration_open_read_more">You can read more about the metadata URL on <a href="https://docs.concordium.com/en/mainnet/docs/mobile-wallet/add-baker-mw.html">docs.concordium.com</a></string>
    <string name="baker_registration_open_continue">Continue</string>
    <string name="baker_registration_open_url_hint">Enter metadata URL</string>
    <string name="baker_registration_open_url_invalid">Please enter a valid HTTP or HTTPS URL</string>
    <string name="baker_status_change_baking_status">Change validating status</string>
    <string name="update_baker_settings_menu_update_baker_stake">Update validator stake</string>
    <string name="update_baker_settings_menu_update_pool_settings">Update pool settings</string>
    <string name="update_baker_settings_menu_update_baker_keys">Update validator keys</string>
    <string name="update_baker_settings_menu_stop_baking">Stop validating</string>
    <string name="baker_update_pool_settings_current_url">Current URL:\n%s</string>
    <string name="notifications_permission_deny">Not now</string>
    <string name="import_wallet_okay_button">Okay</string>
    <string name="import_wallet_backup_file">Backup file</string>
    <string name="import_wallet_backup_file_description">• A file that can be exported and imported \n• Grants access to all connected accounts \n• Can be used to recover a file wallet \n• Used in older Concordium wallets</string>
    <string name="import_wallet_example">Example</string>
    <string name="import_wallet_example_file_name">exported_file.concordiumwallet</string>
    <string name="import_wallet_example_file_name_up">dunno_what.png</string>
    <string name="import_wallet_example_file_name_down">groceries.txt</string>
    <string name="learn_more_icon">Learn more</string>
    <string name="network_name">Name</string>
    <string name="network_genesis_hash">Genesis Hash</string>
    <string name="network_wallet_proxy_url">Wallet Proxy URL</string>
    <string name="network_ccdscan_url">CCDScan URL (optional)</string>
    <string name="network_notifications_service_url">Notifications Service URL (optional)</string>
    <string name="save_network">Save</string>
</resources>