<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuitem_accounts"
        android:icon="@drawable/mw24_ic_menu_home_selector"
        android:orderInCategory="1"
        android:title="@string/app_menu_item_home" />

    <item
        android:id="@+id/menuitem_transfer"
        android:icon="@drawable/mw24_ic_menu_transfer_selector"
        android:orderInCategory="2"
        android:title="@string/app_menu_item_transfer" />

    <item
        android:id="@+id/menuitem_buy"
        android:icon="@drawable/mw24_ic_menu_buy_selector"
        android:orderInCategory="3"
        android:title="@string/app_menu_item_buy" />

    <item
        android:id="@+id/menuitem_earn"
        android:icon="@drawable/mw24_ic_menu_earn_selector"
        android:orderInCategory="4"
        android:title="@string/app_menu_item_earn" />

    <item
        android:id="@+id/menuitem_activity"
        android:icon="@drawable/mw24_ic_menu_activity_selector"
        android:orderInCategory="5"
        android:title="@string/app_menu_item_activity" />

</menu>
