<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size8">

            <com.concordium.wallet.uicore.view.InputFieldView
                android:id="@+id/network_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/network_name" />

            <com.concordium.wallet.uicore.view.InputFieldView
                android:id="@+id/wallet_proxy_url_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size8"
                app:labelText="@string/network_wallet_proxy_url" />

            <com.concordium.wallet.uicore.view.InputFieldView
                android:id="@+id/genesis_hash_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size8"
                app:labelText="@string/network_genesis_hash" />

            <com.concordium.wallet.uicore.view.InputFieldView
                android:id="@+id/ccdscan_url_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size8"
                app:labelText="@string/network_ccdscan_url" />

            <com.concordium.wallet.uicore.view.InputFieldView
                android:id="@+id/notifications_service_url_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size8"
                app:labelText="@string/network_notifications_service_url" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/save_button"
        style="@style/MW24_Button_Primary"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/size16"
        android:text="@string/save_network" />
</LinearLayout>
