<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/app_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_support"
            android:textAppearance="@style/CCX_Typography_H2"
            android:textColor="@color/ccx_neutral_tint_1" />

        <TextView
            android:id="@+id/about_support_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_support_text"
            android:textAppearance="@style/CCX_Typography_Body"
            android:textColor="@color/ccx_neutral_tint_2"
            android:textColorLink="@color/ccx_neutral_tint_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_contact"
            android:textAppearance="@style/CCX_Typography_H2"
            android:textColor="@color/ccx_neutral_tint_2" />

        <TextView
            android:id="@+id/about_contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_contact_text"
            android:textAppearance="@style/CCX_Typography_Body"
            android:textColor="@color/ccx_neutral_tint_2"
            android:textColorLink="@color/ccx_neutral_tint_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_version"
            android:textAppearance="@style/CCX_Typography_H2"
            android:textColor="@color/ccx_neutral_tint_1" />

        <TextView
            android:id="@+id/about_version_text"
            style="@style/CCX_Typography_Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/ccx_neutral_tint_2"
            tools:text="x.y.z" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_legal"
            android:textAppearance="@style/CCX_Typography_H2"
            android:textColor="@color/ccx_neutral_tint_1" />

        <TextView
            android:id="@+id/terms_text_view"
            style="@style/CCX_Typography_Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_terms_link"
            android:textColor="@color/ccx_neutral_tint_2"
            android:textColorLink="@color/ccx_neutral_tint_2" />

        <TextView
            android:id="@+id/privacy_text_view"
            style="@style/CCX_Typography_Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/about_privacy_link"
            android:textColor="@color/ccx_neutral_tint_2"
            android:textColorLink="@color/ccx_neutral_tint_2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
