<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mw24_dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/size32">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cis_newly_received_notice_title"
        android:textAppearance="@style/CCX_Typography_H2"
        android:textColor="@color/ccx_neutral_tint_7" />

    <TextView
        android:id="@+id/details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/template_cis_newly_received_notice_message"
        android:textAppearance="@style/CCX_Typography_Body"
        android:textColor="@color/ccx_neutral_tint_5" />

    <Button
        android:id="@+id/remove_button"
        style="@style/MW24_Button_Secondary_Inverse"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:text="@string/cis_newly_received_notice_remove_token"
        android:textColor="@color/ccx_neutral_tint_7" />

    <Button
        android:id="@+id/keep_button"
        style="@style/MW24_Button_Primary_Inverse"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/size8"
        android:gravity="center"
        android:text="@string/cis_newly_received_notice_keep_token" />

</LinearLayout>
