<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ccx_bottom_sheet_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome_recover_import_via_backup_file"
        android:textAppearance="@style/CCX_Typography_H1"
        android:textColor="@color/ccx_neutral_tint_7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/import_wallet_backup_file"
        android:textAppearance="@style/CCX_Typography_H3"
        android:textColor="@color/ccx_neutral_tint_5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:paddingHorizontal="4dp"
        android:lineHeight="20sp"
        android:text="@string/import_wallet_backup_file_description"
        android:textAppearance="@style/CCX_Typography_Body"
        android:textColor="@color/ccx_neutral_tint_5"
        tools:targetApi="p" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/import_wallet_example"
        android:textAppearance="@style/CCX_Typography_Body"
        android:textColor="@color/ccx_neutral_tint_5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/example_file_up_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/learn_more_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ccx_ico_file_shield_4" />

        <TextView
            android:id="@+id/example_file_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="start|center_vertical"
            android:text="@string/import_wallet_example_file_name_up"
            android:textAppearance="@style/CCX_Typography_Body"
            android:textColor="@color/ccx_mineral_blue_tint_4" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="start|center_vertical"
        android:text="@string/import_wallet_example_file_name"
        android:textAppearance="@style/CCX_Typography_Body"
        android:textColor="@color/ccx_mineral_blue_tint_4"
        app:drawableStartCompat="@drawable/ccx_ico_file_shield_4"
        app:drawableTint="@color/ccx_mineral_blue_tint_4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/example_file_down_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/learn_more_icon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ccx_ico_file_shield_4" />

        <TextView
            android:id="@+id/example_file_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/import_wallet_example_file_name_down"
            android:textAppearance="@style/CCX_Typography_Body"
            android:textColor="@color/ccx_mineral_blue_tint_4" />
    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        style="@style/CCX_Button_Primary"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:backgroundTint="#14191F"
        android:gravity="center"
        android:text="@string/import_wallet_okay_button"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/create_wallet_step_3_text_view" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>
