<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mw24_dialog_gradient_background">

    <ImageButton
        android:id="@+id/close_button"
        style="@style/CryptoX_ImageButton"
        android:contentDescription="@string/notifications_permission_deny"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ccx_ico_x_3"
        app:tint="@null" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/delegation_remove_subtitle1"
        android:textAppearance="@style/MW24_Typography_Text_Main"
        android:textColor="@color/ccx_neutral_tint_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_button" />

    <TextView
        android:id="@+id/details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/delegation_remove_description"
        android:textAppearance="@style/MW24_Typography_Label_Secondary"
        android:textColor="@color/mw24_black_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <Button
        android:id="@+id/go_back_button"
        style="@style/CCX_Button_Primary.Modal"
        android:layout_marginTop="30dp"
        android:text="@string/delegation_validation_go_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_text_view" />

    <Button
        android:id="@+id/continue_button"
        style="@style/CCX_Button_Primary.Modal"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:text="@string/delegation_validation_continue_button"
        android:textColor="@color/ccx_neutral_tint_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
