<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/baker_registration_open_continue"
        android:layout_below="@id/toolbar_layout"
        android:layout_marginTop="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="vertical">

            <LinearLayout
                style="@style/CryptoX_Container_TextCard"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/open_url_explain"
                    style="@style/CryptoX_Typography_Body_Medium"
                    android:fontFamily="sans-serif"
                    android:text="@string/baker_registration_open_explain"
                    android:textColor="@color/cryptox_grey_additional" />

                <TextView
                    android:id="@+id/current_url"
                    style="@style/CryptoX_Typography_Body_Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    tools:text="@string/baker_update_pool_settings_current_url"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/open_url"
                    style="@style/CryptoX_InputField"
                    android:layout_marginTop="16dp"
                    android:hint="@string/baker_registration_open_url_hint"
                    android:importantForAutofill="no"
                    android:inputType="textUri|textWebEmailAddress" />
            </LinearLayout>

            <TextView
                android:id="@+id/open_url_error"
                style="@style/CryptoX_Typography_Body_Medium.Error"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/baker_registration_open_url_invalid"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/read_more_text_view"
                style="@style/CryptoX_Typography_Body_Medium"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/baker_registration_open_read_more"
                android:textColor="@color/cryptox_grey_additional" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/baker_registration_open_continue"
        style="@style/CryptoX_Button_Primary"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="20dp"
        android:text="@string/baker_registration_open_continue" />

</RelativeLayout>
